# foldandtilt

./: .gitignore  README
FoldAndTilt/CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
FoldAndTilt/DerivedData/FoldAndTilt/: info.plist
FoldAndTilt/DerivedData/FoldAndTilt/Index/Debug/macosx10.9-x86_64/FoldAndTilt.xcindex/: db.xcindexdb-shm  db.xcindexdb.strings-dir  db.xcindexdb.strings-file  db.xcindexdb.strings-res  db.xcindexdb.strings-sym
FoldAndTilt/FoldAndTilt/: FoldAndTilt.1  main.cpp
FoldAndTilt/FoldAndTilt.xcodeproj/: project.pbxproj
FoldAndTilt/FoldAndTilt.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FoldAndTilt/FoldAndTilt.xcodeproj/project.xcworkspace/xcuserdata/afsheen.xcuserdatad/: UserInterfaceState.xcuserstate
FoldAndTilt/FoldAndTilt.xcodeproj/xcuserdata/afsheen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
FoldAndTilt/FoldAndTilt.xcodeproj/xcuserdata/afsheen.xcuserdatad/xcschemes/: FoldAndTilt.xcscheme  xcschememanagement.plist
